src/app/vince-baker/card.css
/* CSS CARD */
/* IMAGE */
.card-image{
    display: flex;
    justify-content: center;
    align-items: center;
}

.card-image img{
    width: 200px;
    height: 200px;
    border-radius: 100%;
    text-align: center;
    object-fit: cover;
    object-position: center;
}

/* CONTAINER */
.card-page-container{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: #131516;
    font-family: 'Lato', sans-serif;
    padding: 0 25px;
}

/* CARD */
.card-container{
    display: flex;
    width: 650px;
    height: auto;
    background: linear-gradient(to right,#024945, #12a89c); /* #2FEBD4, #DEFFFD*/
    border-radius: 12px;
    box-shadow: 1px 7px 10px 2px rgba(0, 0, 0, .15);
}

.card-description{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.card-image, .card-description{
    padding: 30px;
    text-align: left;
    color: #FFFFFF;
}

.card-description h2{
    line-height: 2;
    font-weight: 500;
    font-size: medium;
}

.card-description p{
    font-weight: 300;
    font-size: 17px;
}

.card-description h1{
    font-weight: 400;
}

/* ICONS */
.card-description .icons{
    margin-top: 30px;
}
.card-description .icons a{
    display: inline-block;
    margin: 0 30px 0 30px;
    color: #FFFFFF;
    font-size: 30px;
    transition: .3s;
}
a:hover{
    transform: translateY(-3px) scale(1.05);
}

/* TOOLTIP */
.card-tooltip-text {
    position: absolute;
    top: -25px;
    left: -115%;
    z-index: 2;
    width: 100px;
    color: white;
    font-size: 12px;
    background-color: #192733;
    border-radius: 10px;
    padding: 5px 10px 5px 10px;
}
#fade {
    opacity: 0;
    transition: opacity 0.3s;
}
.card-hover-text:hover #fade { opacity: 1; }
.card-hover-text {
    position: relative;
    display: inline-block;
    margin: 10px;
    font-family: 'Lato', sans-serif;
    font-weight: 200;
    text-align: center;
}

/* RESPONSIVE */
@media (max-width: 576px){
    .card-page-container{
        height: 100vh;
        padding: 0 15px;
    }
    .card-container{
        display: flex;
        flex-direction: column-reverse;
        background: linear-gradient(#12a89c, #024945);
        width: 750px;
        margin-top: 12px;
        margin-bottom: 12px;
    }
    .card-image img{
        width: 90px;
        height: 90px;
    }
    .card-image{
        padding: 15px 0 0 0;
    }
    .card-description{
        padding: 10px 20px 18px 20px;
    }
    .card-description h1{
        font-weight: 400;
        font-size: 25px;
    }
    .card-description h2{
        line-height: 2;
        font-weight: 500;
        font-size: 17px;
    }
    .card-description p{
        font-weight: 300;
        font-size: 15px;
    }
    .card-description .icons{
        margin-top: 18px;
    }
}
@media (min-width: 320px){
    .icons{
        display: flex;
        justify-content: center;
        align-items: center;
        margin-top: 20px;
    }
}

